@@ -1,3 +1,7 @@
+2001-12-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Remove TIMEZONE.
+
 2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* sample.tmdarc: Add CONFIRM_ACCEPT_CC.
